# uhh_nlp

./: .gitignore  pyproject.toml
Ex 1/: hackernews-articles.csv  hn_articles.csv  lemma-index.json  stem-index.json  word-index.json
notebooks/Ex_1/: Assignment-01.ipynb
notebooks/Ex_2/: Assignment-02.ipynb  temp_sample.txt
